Replace PlantUML with Mermaid (#94)
* Refresh documentation site and related content

* Refactor guide docs and sync generated assets

---------

Co-authored-by: Daniel Mengel <daniel@codex-macos.shared>